[gd_scene load_steps=7 format=3 uid="uid://br7h4h8l1xclc"]

[ext_resource type="Script" uid="uid://b8c1sn16nsekx" path="res://content/environment/entities/breakable_wall.gd" id="1_jwxo7"]
[ext_resource type="Texture2D" uid="uid://g368y7m62f6k" path="res://resources/sprites/wall.png" id="2_nnmfg"]
[ext_resource type="Texture2D" uid="uid://balrlascuogqi" path="res://resources/sprites/wall-bit.png" id="3_nkxwe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfrm1"]
size = Vector2(12, 12)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pxr72"]
lifetime_randomness = 0.07
particle_flag_disable_z = true
angle_min = -540.0
angle_max = -351.6
initial_velocity_min = 171.52
initial_velocity_max = 369.19
gravity = Vector3(0, 1000, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u7hjx"]
size = Vector2(16, 16)

[node name="BreakableWall" type="StaticBody2D"]
script = ExtResource("1_jwxo7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 2.38419e-07)
scale = Vector2(1, 0.5)
texture = ExtResource("2_nnmfg")

[node name="PhysicalShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bfrm1")

[node name="WallBreakParticles" type="GPUParticles2D" parent="."]
emitting = false
texture = ExtResource("3_nkxwe")
lifetime = 2.0
explosiveness = 1.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_pxr72")

[node name="Area2D" type="Area2D" parent="."]

[node name="InteractableShape" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_u7hjx")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
